
# Time-stamp: <2007-11-14 22:32:46 shinya>

lib_LTLIBRARIES = libdatalog.la libdatareplay.la

libdatalog_la_SOURCES = log_coll.c log_common.c log_context.c log_env.c \
log_pt2pt.c req_table.c

libdatareplay_la_SOURCES = replay_coll.c replay_common.c replay_context.c \
replay_env.c replay_pt2pt.c req_table.c
